--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drag and Drop</title>
+    <title>Tony's Board</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="main-title">Kanban Board</h1>
+    <h1 class="main-title">Tony's Board</h1>
     <div class="drag-container">
         <ul class="drag-list">
             <!-- Backlog Column -->
